# onnx-tunnel

./: pyproject.toml
onnx_tunnel/: cli.py
onnx_tunnel/models/onnx/: __init__.py  io.py  model.py
onnx_tunnel/pipelines/: __init__.py  base.py
onnx_tunnel/pipelines/onnx/: io.py  pipeline.py
onnx_tunnel/registry/: __init__.py  base.py  model.py  pipeline.py
onnx_tunnel/registry/types/: backend.py
onnx_tunnel/server/: lifespan.py  main.py
src/ml_tunnel/: cli.py
